# when qecsim on pypi, add to install_requires
[metadata]
name = qecsimext
version = attr: qecsimext.__version__

[options]
python_requires = >= 3
packages = find:
package_dir = = src
include_package_data = true
install_requires =
    numpy
;    qecsim

[options.packages.find]
where = src

[options.extras_require]
# $ pip install -e .[dev]
dev =
    tox
    tox-venv
    pytest

[tool:pytest]
testpaths = tests
addopts = --verbose

[options.entry_points]
qecsim.cli.run.codes =
    ext_3qubit = qecsimext.threequbit:ThreeQubitCode
qecsim.cli.run.error_models =
    ext_3qubit.bit_flip = qecsimext.threequbit:ThreeQubitBitFlipErrorModel
qecsim.cli.run.decoders =
    ext_3qubit.lookup = qecsimext.threequbit:ThreeQubitLookupDecoder
qecsim.cli.run_ftp.codes =
qecsim.cli.run_ftp.error_models =
qecsim.cli.run_ftp.decoders =
