[metadata]
name = qecsimext
version = attr: qecsimext.__version__
author = David K. Tuckett
author_email = qecsim@gmail.com
description = qecsim extension example
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/qecsim/qecsimext
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
project_urls =
    Source Code = https://github.com/qecsim/qecsimext

[options]
python_requires = >= 3.5
packages = find:
package_dir = = src
install_requires =
    numpy>=1.17
    qecsim

[options.packages.find]
where = src

[options.extras_require]
# $ pip install -e .[dev]
dev =
    tox
    pytest

[options.entry_points]
qecsim.cli.run.codes =
    ext_3qubit = qecsimext.threequbit:ThreeQubitCode
qecsim.cli.run.error_models =
    ext_3qubit.bit_flip = qecsimext.threequbit:ThreeQubitBitFlipErrorModel
qecsim.cli.run.decoders =
    ext_3qubit.lookup = qecsimext.threequbit:ThreeQubitLookupDecoder
qecsim.cli.run_ftp.codes =
qecsim.cli.run_ftp.error_models =
qecsim.cli.run_ftp.decoders =
